--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Image Crawler</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="pt-12"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
